# apple-health-export

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.rust  Makefile  README.md  docker-compose.yml  linkedin-post.md  pytest.ini
.github/workflows/: ci.yml  docker-publish.yml  release.yml
dashboards/: apple-health-clinical-deep-dive.json  apple-health-daily-ops.json  apple-health-dashboard.json  apple-health-metrics-gallery.json  apple-health-overview.json  apple-health-readiness.json  apple-health-workouts.json
gateway/: Dockerfile  checkpoint_store.py  health_export_pb2.py  health_export_pb2_grpc.py  requirements.txt  server.py  setup.py  vm_writer.py
gateway-rs/: Cargo.toml  build.rs  rustfmt.toml
gateway-rs/src/: checkpoint.rs  main.rs  server.rs  vm_writer.rs
grafana/provisioning/dashboards/: provider.yml  (+6 more)
ios-app/: Package.swift  README.md  project.yml  setup.sh
ios-app/HealthExporter/: App.swift  AppConfig.swift  AppLogger.swift  CheckpointManager.swift  DemoDataManager.swift  GrpcClient.swift  HealthKitManager.swift  Info.plist
launcher/: Cargo.toml
launcher/scripts/: download-binaries.sh
launcher/src/: config.rs  main.rs  platform.rs  supervisor.rs
proto/: health_export.proto
scripts/: generate_dashboards.py  install.sh  start.sh
tests/: conftest.py  test_checkpoint_store.py  test_docker_stack.py  test_end_to_end.py  test_grafana_provisioning.py  test_grpc_gateway.py  test_proto_contract.py  test_server_checkpoint_behavior.py  test_vm_writer.py
tests/fixtures/: all_metric_types.json  sample_healthkit_data.json
(+16 files in other folders)
