[package]
name = "apple-health-export-gateway"
version = "0.1.0"
edition = "2021"
description = "Rust gRPC gateway for Apple Health Export — syncs HealthKit metrics to Victoria Metrics"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"